kodekloud/mock-exams/exam-2/q4/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-video-svc
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: ckad-mock-exam-solution.com
      http:
        paths:
          - path: /video
            pathType: Prefix
            backend:
              service:
                name: my-video-service
                port:
                  number: 8080
